# skill-forge

./: .env.example  .gitignore  LICENSE  README.md  SOP.md  pyproject.toml  thinking-process.md
.github/workflows/: ci.yml
examples/: build-retrospective.md  comparison.md  golden-lifecycle.md  quickstart.md  scoring-rubric.md  skill-format.md  skill-schema.md
examples/scenarios/: sales-scenarios.md  support-scenarios.md  training-scenarios.md
samples/: case-price.md  current-chat.md  external-agent.md  external-agent.yaml  skill-price-objection.md
scripts/: p0_validate.py  smoke_test.sh
skill_forge/: __init__.py  cli.py  config.py  llm.py  models.py  parsers.py  skill_manager.py  storage.py  template_content.py  templates.py  validation.py  versioning.py
skill_forge/adapters/: __init__.py  constants.py  generic_agent.py  json_adapter.py  markdown.py  prompt_adapter.py  yaml_adapter.py
skill_forge/commands/: __init__.py  _promote.py  apply_review.py  distill.py  drill.py  field_log.py  ingest.py  init_cmd.py  inspect_cmd.py  melt.py  promote.py  propose_update.py  recommend.py  review.py  search.py  version_cmd.py
templates/: distill.md  drill.md  inspect.md  melt.md  recommend.md  review.md
tests/: test_absorbed.py  test_attack_defense.py  test_golden_lifecycle.py  test_llm.py  test_storage.py  test_validation.py
