[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-forge"
version = "0.1.0"
description = "A local CLI for distilling business materials and external agents into trainable Skills."
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "PyYAML>=6.0.0",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0"
]

[project.scripts]
skill-forge = "skill_forge.cli:app"

[tool.setuptools.packages.find]
include = ["skill_forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
